Front end realizado com Thymeleaf ao invez de react