@@ -1,7 +1,9 @@
 package com.elearning.config;
 
+import com.elearning.security.jwt.JwtFilter;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
@@ -13,10 +15,10 @@ import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import com.elearning.security.jwt.JwtFilter;
 
 import java.util.Arrays;
 import java.util.List;
@@ -37,23 +39,64 @@ public class SecurityConfig {
         http
             .csrf(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-            .sessionManagement(session -> session
-                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-            )
+            .sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED))
+
             .authorizeHttpRequests(auth -> auth
+                // --- Endpoints de Autenticação ---
+                .requestMatchers(HttpMethod.POST, "/auth/login-api").permitAll()
+                .requestMatchers(HttpMethod.POST, "/auth/register").permitAll()
+                .requestMatchers(HttpMethod.GET,  "/auth/validate").permitAll()
+
+                // --- Recursos Estáticos ---
+                .requestMatchers("/css/**", "/js/**", "/images/**", "/webjars/**", "/favicon.ico").permitAll()
+
+                // --- Páginas Thymeleaf Públicas ---
+                .requestMatchers(HttpMethod.GET, "/").permitAll()
+                .requestMatchers(HttpMethod.GET, "/login", "/login-error").permitAll()
+                .requestMatchers(HttpMethod.GET, "/register").permitAll()
+                .requestMatchers(HttpMethod.GET, "/cursos", "/cursos/{id}").permitAll()
+
+                // --- Formulário e Criação de Curso ---
+                .requestMatchers(HttpMethod.GET, "/cursos/novo").authenticated()
+                .requestMatchers(HttpMethod.POST, "/cursos/novo").authenticated()
+
+                // --- Endpoints de Inscrição ---
+                .requestMatchers(HttpMethod.POST, "/inscricoes/matricular").authenticated()
+
+                // --- Actuator ---
+                .requestMatchers("/actuator/health").permitAll()
+                .requestMatchers("/actuator/**").hasRole("ADMIN")
+
+                // --- Swagger ---
                 .requestMatchers(
-                    "/api/auth/**",
-                    "/actuator/**",
-                    "/api/actuator/health",
-                    "/api/health",
                     "/v3/api-docs/**",
                     "/swagger-ui/**",
-                    "/swagger-ui.html",
-                    "/webjars/**"
+                    "/swagger-ui.html"
                 ).permitAll()
+
+                // Qualquer outra requisição requer autenticação
                 .anyRequest().authenticated()
             )
-            .addFilterAfter(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+
+            // Configuração de formLogin
+            .formLogin(form -> form
+                .loginPage("/login")
+                .loginProcessingUrl("/login")
+                .defaultSuccessUrl("/", true)
+                .failureUrl("/login?error=true")
+                .permitAll()
+            )
+
+            .logout(logout -> logout
+                .logoutRequestMatcher(new AntPathRequestMatcher("/logout"))
+                .logoutSuccessUrl("/login?logout=true")
+                .invalidateHttpSession(true)
+                .deleteCookies("JSESSIONID")
+                .permitAll()
+            )
+
+            // Filtro JWT para APIs REST
+            .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
@@ -61,19 +104,12 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost:3000",
-            "http://frontend:80"
-        ));
+        configuration.setAllowedOrigins(List.of("http://localhost:8081"));
         configuration.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
         ));
-        configuration.setAllowedHeaders(Arrays.asList(
-            "Authorization", "Cache-Control", "Content-Type"
-        ));
-        configuration.setExposedHeaders(List.of(
-            "Authorization", "X-Total-Count"
-        ));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-Total-Count", "Content-Disposition"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -84,7 +120,7 @@ public class SecurityConfig {
 
     @Bean
     public AuthenticationManager authenticationManager(
-        AuthenticationConfiguration authConfig
+            AuthenticationConfiguration authConfig
     ) throws Exception {
         return authConfig.getAuthenticationManager();
     }
